# ha-virtual-socket-device

./: .gitignore  README.md  compose.yml  hacs.json  pyproject.toml
custom_components/: manifest.json
custom_components/virtual_socket_device/: __init__.py  config_flow.py  const.py  manifest.json  switch.py
