[project]
name = "ha-virtual-socket-device"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "homeassistant>=2025.4.4",
    "pytest>=8.3.5",
    "pytest-homeassistant-custom-component>=0.13.236",
]

[tool.pyright]
extraPaths = ["custom_components"]
reportAny = false
reportExplicitAny = false
